--- a/littlelemon/src/css/Main.css
+++ b/littlelemon/src/css/Main.css
@@ -160,16 +160,16 @@ border: none;
 .testimonial-card{
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     border: 1px solid var(--secondaryColor3);
     border-radius: 8px;
     margin: 1rem;
-    width: 25%;
+    width: 20%;
     
 }
 .user-img{
-    width: 80%;
-    margin: 0 10%;
-    border-radius: 50%;
+    width: 100%;
+    
 }
 
 /* styling for when screen size is equal to or less than 1024px */
